# asalpi-flask-api

./: .gitignore
back-end/: README.md  app.py  config.py  extensions.py  pyproject.toml  pyproject.toml.bkp  requirements.txt
back-end/models/: NewsModel.py  userModel.py
back-end/schemas/: newsSchema.py  userSchema.py
back-end/static/assets/: banner site.docx
back-end/static/css/: clube.css  colonia.css  escola.css  index.css  news.css  newsList.css  newsloginstyle.css
back-end/static/js/: clube.js  escola.js  news-single.js  news.js  newslogin.js  scripts.js
back-end/templates/: News.html  NewsList.html  clube.html  colonia.html  escola.html  index.html  newsadmin.html
