[tool.poetry]
name = "asalpi-flask-api"
version = "0.1.0"
description = "API Flask para o projeto ASSALPI"
authors = ["Kelvis <seuemail@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "2.3.3"
Flask-SQLAlchemy = "3.1.1"
Flask-Marshmallow = "1.2.1"
marshmallow-sqlalchemy = "1.0.0"
Flask-Bcrypt = "1.0.1"
Flask-JWT-Extended = "4.6.0"
python-dotenv = "1.0.1"
Flask-Cors = "5.0.0"
gunicorn = "23.0.0"
flask-wtf = "1.2.1"
pymysql = "1.1.1"
Pillow = "9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
